21/10/23:
-Moved all base assets into AssetManager
-Fixed bug where textures would not bind properly after scene reload
-Fixed input state bug caused by not disregarding GLFW_REPEAT events
-Fixed audio not playing

20/10/23:
-Overhauled input system, better state tracking
-Improved entity node UI selecting controls
-UI improvements, more stable scene display panel
-Audio components pre-allocated on correct side of boundary

15/10/23:
-Fog improvements
-GetComponent added to scripts
-Audio component improvements (editor ui and functionality)
-Bugfixes

12/10/23:
-More bugfixes to transforms and gizmos
-Material naming conflict during serialization fixed
-Rotation error in transform hierarchies fixed, unoptimized

10/10/23:
-More audio component settings
-Fixed another audio asset serialization bug
-Audio component serialization
-Few other small bugfixes

9/10/23:
-Lowered terrain memory cost significantly and improved shading
-Fixed terrain generation, LOD seams still present 
-Fixed mesh deletion crash caused by attempting to render a deleted preview image with imgui

2/10/23:
-Fixed audio asset .osound file serialization duplication bug

1/10/23:
-Another fix to transforms (rotations behaviour wrong)

28/9/23:
-Transform inheritance math fixed, setabsoluteX functions fixed
-LookAt transform fixed

27/9/23:
-Fixed terrible ecs bug, have to do all component memory allocation in engine instead of scripts - fixes a really common crash occuring after recompiling scripts

24/9/23:
-Made exiting simulation mode in the editor much faster (was reloading the env map each time previously)
-Fixed large texture memory leak not freeing stbi data (forgot to correct changes made ages ago), this has fixed a lot of bugs I didn't understand (was just running out of memory)
-Fixed some bugs with filepath serialization and absolute/relative issues
-Fixed VAO memory leak

22/9/23:
-In-engine rendering of physx debug graphics
-Rewrite of VAO's and buffers, more generalized