@@ -1,4 +1,7 @@
 21/10/23:
+-Scripts debuggable in debug mode
+-Script recompilation no longer unnecessarily happens on editor restart
+-Old script PDB files cleaned up properly
 -Moved all base assets into AssetManager
 -Fixed bug where textures would not bind properly after scene reload
 -Fixed input state bug caused by not disregarding GLFW_REPEAT events
